objects/CMN_WebserviceCallQueue__c.object
<CustomObject>
    <description>A object which is used to orchestrate and track webservices (inbound and outbound). By injecting an item into this object will asynchronously manage a call to external web service.</description>
    <fields>
        <fullName>CMN_ClientIDNumber__c</fullName>
        <description>Client ID Number</description>
        <label>Client ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ClientIdentificationType__c</fullName>
        <description>Type of client identification</description>
        <label>Client Identification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CurrentCallNo__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Position of the call in the queue</description>
        <label>Current Call No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_Errors__c</fullName>
        <description>If any errors were encountered whilst processing a request these will be logged in this field</description>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_IsResponsePaged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to see if the response is paged</description>
        <label>Is Response Paged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_MockedResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set to true if the service was putting into mocking mode when the API call was made and the response is a mocked response.</description>
        <label>Mocked Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_NextRetry__c</fullName>
        <description>Time of next retry to call webservice</description>
        <label>Next Retry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMN_PartnerCode__c</fullName>
        <description>Partner Code for webservice call queue</description>
        <label>Partner Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_PartnerIDNumber__c</fullName>
        <description>Partner ID Number for webservice call queue</description>
        <label>Partner ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_RequestTimeTaken__c</fullName>
        <description>The time taken in Milliseconds for a request to an endpoint to complete. It doesn&apos;t include any processing of the response</description>
        <label>Request Time Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_Request_Parameters__c</fullName>
        <description>Name value pair of parameters used when passing values between the controller and front end</description>
        <label>Request Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_Request__c</fullName>
        <description>Queue Request</description>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_Response__c</fullName>
        <description>Response for webservice call queue</description>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_Retries__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of retries</description>
        <label>Retries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_Service__c</fullName>
        <description>The name of the service; either inbound or outbound.</description>
        <label>Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_SourceID__c</fullName>
        <description>Source ID of webservice call queue</description>
        <label>Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_StatusCode__c</fullName>
        <description>The HTTP Status code of the request</description>
        <label>Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Status__c</fullName>
        <description>Select status of webservice call queue</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Retry</fullName>
                </value>
                <value>
                    <fullName>Retrying</fullName>
                </value>
                <value>
                    <fullName>Web Service Call Completed</fullName>
                </value>
                <value>
                    <fullName>Batched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_TriggeringObjectId__c</fullName>
        <description>Triggering Object ID</description>
        <label>Triggering Object Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_TriggeringObjectUrl__c</fullName>
        <description>Open the triggering objects in a new page</description>
        <formula>HYPERLINK(&quot;/&quot; +  CMN_TriggeringObjectId__c , &quot;Open&quot;)</formula>
        <label>View Trigger Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Type__c</fullName>
        <description>Select type of webservice call queue</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_URL__c</fullName>
        <description>The Url to which the request is being sent</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Webservice Call Queue</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_TriggeringObjectUrl__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_Response__c</columns>
        <columns>CMN_RequestTimeTaken__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:4</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Kurt Schultz</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CMN_AllDetail</fullName>
        <columns>NAME</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Type__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_Response__c</columns>
        <columns>CMN_RequestTimeTaken__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CMN_AllLive</fullName>
        <columns>NAME</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Type__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request_Parameters__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_Response__c</columns>
        <columns>CMN_RequestTimeTaken__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMN_MockedResponse__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Live</label>
    </listViews>
    <listViews>
        <fullName>CMN_AllMocked</fullName>
        <columns>NAME</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Type__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_Response__c</columns>
        <columns>CMN_RequestTimeTaken__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMN_MockedResponse__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Mocked</label>
    </listViews>
    <listViews>
        <fullName>CMN_Completed</fullName>
        <columns>NAME</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_TriggeringObjectId__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_MockedResponse__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMN_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
    </listViews>
    <listViews>
        <fullName>CMN_Failed</fullName>
        <columns>NAME</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_TriggeringObjectId__c</columns>
        <columns>CMN_Response__c</columns>
        <columns>CMN_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMN_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed</label>
    </listViews>
    <listViews>
        <fullName>CMN_TodaysCalls</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_TriggeringObjectId__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/18/2022 8:50 PM</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Delveen</value>
        </filters>
        <label>Today&apos;s Calls</label>
    </listViews>
    <listViews>
        <fullName>CMN_TodaysFailedCalls</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_TriggeringObjectId__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CMN_Status__c</field>
            <operation>notEqual</operation>
            <value>Queued,Completed,Web Service Call Completed</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>notContain</operation>
            <value>integration</value>
        </filters>
        <label>Today&apos;s Failed Calls</label>
    </listViews>
    <listViews>
        <fullName>CMN_TodaysSuccessCalls</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_TriggeringObjectId__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CMN_StatusCode__c</field>
            <operation>equals</operation>
            <value>200</value>
        </filters>
        <label>Today&apos;s Success Calls</label>
    </listViews>
    <listViews>
        <fullName>SVC_EnqueuedForBatchProcessing</fullName>
        <columns>NAME</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Type__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request_Parameters__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_Response__c</columns>
        <columns>CMN_RequestTimeTaken__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMN_Status__c</field>
            <operation>equals</operation>
            <value>Batched</value>
        </filters>
        <label>Enqueued for batch processing</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Calls_that_Failed</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_TriggeringObjectId__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Calls that Failed</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Calls_that_Passed</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CMN_Service__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_StatusCode__c</columns>
        <columns>CMN_Request__c</columns>
        <columns>CMN_TriggeringObjectId__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CMN_StatusCode__c</field>
            <operation>equals</operation>
            <value>200</value>
        </filters>
        <label>Today&apos;s Calls that Passed</label>
    </listViews>
    <nameField>
        <displayFormat>WCQ-{0000000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webservice Calls Queue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>